--- a/.tasks.md
+++ b/.tasks.md
@@ -1,5 +1,5 @@
 Todo
-- [ ] Create --health command for checking installed tools required
+- [x] Create --health command for checking installed tools required
 - [x] Change order of config checking so that the home folder is prioritised
 - [ ] Create --generate-config command that writes the default config to ~/.workflows.toml
 
