--- a/.tasks.md
+++ b/.tasks.md
@@ -2,4 +2,5 @@ Todo
 - [x] Create --health command for checking installed tools required
 - [x] Change order of config checking so that the home folder is prioritised
 - [ ] Create --generate-config command that writes the default config to ~/.workflows.toml
+- [ ] Add `new` command for creating a new workspace
 
